# fbfs-app

./: .env.example  README.md  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  wrangler.toml
.github/workflows/: deploy.yml
app/: root.tsx
app/components/ui/: icon.tsx
app/routes/: fbfs.tsx  index.tsx
app/utils/: cache.server.ts
backend/: .env.example  deploy.sh  jcloud.yaml  pyproject.toml  why-langchain-sucks.md
backend/app/: __init__.py  char_ask.py
backend/gateway/: gateway.yml
public/: site.webmanifest
tests/mocks/: index.ts
